--- a/app/src/main/res/layout/tefst.xml
+++ b/app/src/main/res/layout/tefst.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ACC5E1"
+        android:background="#85C1C3"
         android:orientation="horizontal">
 
         <TextView
@@ -32,18 +32,6 @@
             android:layout_marginBottom="100dp" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonAddRodents"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#147EC5"
-        android:onClick="addNewRodent"
-        android:text="+"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -62,10 +50,10 @@
             android:layout_weight="1"
             android:adjustViewBounds="true"
             android:background="@drawable/rounded"
-            android:gravity="center"
             android:orientation="horizontal"
             android:padding="15dp"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            android:gravity="center">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -133,7 +121,7 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/imageButtonHealth"
+                    android:id="@+id/imageButtonVet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -141,7 +129,7 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@drawable/roundbutton"
-                    android:onClick="onClickHealth"
+                    android:onClick="onClickVet"
                     android:padding="15dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_health"
@@ -187,5 +175,17 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonAddRodents"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="#147EC5"
+        android:onClick="addNewRodent"
+        android:text="+"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
